add --> adding projects traditional illustration

--- a/index.html
+++ b/index.html
@@ -74,12 +74,7 @@
                 </a>
             </div>
         </span>
-        <svg class="svg_gradients">
-            <linearGradient id="MyGradient">
-                <stop offset="5%" stop-color="var(--firstColor" />
-                <stop offset="95%" stop-color="var(--secondColor" />
-            </linearGradient>
-        </svg>
+
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -394,8 +389,8 @@
                     <h2>Ilustración <span class="accent_text">/</span> Diseño <span class="accent_text">/</span> Web <span class="accent_text">/</span> Programación</h2>
                 </div>
                 <div class="hero_btns_container btns_container">
-                    <button class="btn btn_hero" id="hero_btn_about" name="about_section"><h3 class="label_btn">Acerca de mi</h3></button>
                     <button class="btn btn_hero" id="hero_btn_portfolio" name="portfolio_section"><h3 class="label_btn">Portafolio</h3></button>
+                    <button class="btn contact_btn" id="hero_btn_about" name="about_section"><h3 class="label_btn">Contactame</h3></button>
                 </div>
                 <button class="btn_down btn_menu" id="hero_btn_down" name="about_section">
                     <h3>Ver mas</h3>
