checking my image when url

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+        <link rel="image_src" href="./src/img/desk.png" />
         <script type="module" charset="utf-8" src="./src/js/index.js"></script>
         <link rel="icon" type="image/svg" href="" />
         <link rel="apple-touch-icon" href="" />
@@ -2466,6 +2468,10 @@
                         </div>
                     </div>
                 </div>
+                <div class="swipe_animation_container_full">
+                    <h1 class="title_section animation_up" id="extra_title_skills">Certificaciones</h1>
+                </div>
+                <div class="certifications_container"></div>
             </div>
         </section>
         <section class="section with_bg contact_section" id="contact_section">
