checking src img

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
         <meta name="keywords" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="image_src" href="./src/img/desk.png" />
         <script type="module" charset="utf-8" src="./src/js/index.js"></script>
-        <link rel="icon" type="image/svg" href="" />
-        <link rel="apple-touch-icon" href="" />
-        <link rel="canonical" href="" />
+        <link rel="icon" type="image/svg" href="./src/img/personal_logos/johnK_tab_icon.svg" />
+        <link rel="image_src" href="./src/img/desk.png" />
+        <link rel="canonical" href="https://johnmckrazy.github.io/JohnK_Portafolio/" />
         <!--!GOOGLE FONTS-->
         <!--^TITANIM FONT-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
