change --> tooltip show position

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             <h3 class="title">Tecnologia</h3>
             <p class="description">descripcion de la tecnologia, mejor detallada para que parezca un texto bien redactado.</p>
         </span>
-
         <span class="bubble bio_bubble">
             <div class="header_bubble"></div>
             <img class="photo" src="./src/img/pagina/johnKPhoto.jpg" alt="" />
@@ -494,9 +493,14 @@
         <section class="section about_section" id="about_section">
             <div class="bg_section"></div>
             <div class="section_content content flex flex_responsive">
-                <div class="about_salute swipe_animation_container_half">
-                    <h1 class="title_salute animation_up" id="title_salute">Hola, soy</h1>
-                    <h2 class="title_name animation_up" id="title_name">Jonathan Grajeda<span class="title_effect">_</span></h2>
+                <div class="about_salute">
+                    <div class="swipe_animation_container_half">
+                        <h1 class="title_salute animation_up" id="title_salute">Hola, soy</h1>
+                    </div>
+
+                    <div class="swipe_animation_container_half">
+                        <h2 class="title_name animation_up" id="title_name">Jonathan Grajeda<span class="title_effect">_</span></h2>
+                    </div>
                     <p class="about_text">
                         Disfruto de crear, las
                         <span class="animation_key" data-key="dev">computadoras</span>
@@ -2229,9 +2233,8 @@
         <section class="section portfolio_section" id="portfolio_section">
             <div class="section_content content">
                 <div class="swipe_animation_container_full">
-                    <h1 class="title_section animation_up" id="title_portfolio">Portafolio</h1>
+                    <h1 class="title_section animation_up" id="title_portfolio">Proyectos Destacados</h1>
                 </div>
-                <h2 class="subtitle_section">Proyectos Destacados</h2>
                 <div class="cards_container swipe_animation_container_half cards_hot_container">
                     <div class="loader_container" data-name="loader_cards_hot_container" id="loader_cards_hot_container">
                         <div class="spinner_container" id="spinner_container_cards_hot">
