fix --> intersection observer issues in portfolio section

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <link rel="stylesheet" href="./src/css/style.css" />
     </head>
     <body class="dark_theme">
-        <span class="bubble info_bubble">
+        <div class="bubble info_bubble">
             <h3 class="title">Tecnologia</h3>
             <p class="description">descripcion de la tecnologia, mejor detallada para que parezca un texto bien redactado.</p>
-        </span>
-        <span class="bubble bio_bubble">
+        </div>
+        <div class="bubble bio_bubble">
             <div class="header_bubble"></div>
             <img class="photo" src="./src/img/pagina/johnKPhoto.jpg" alt="" />
             <div class="info">
@@ -74,15 +74,15 @@
                     </a>
                 </div>
             </div>
-        </span>
-        <span class="bubble rex_bubble">
+        </div>
+        <div class="bubble rex_bubble">
             <div class="header_bubble"></div>
             <img class="photo" src="./src/img/pagina/rex.png" alt="" />
             <div class="info">
                 <h3 class="name">Maximo Decimo Reximiliano</h3>
                 <h3 class="place">México CDMX</h3>
             </div>
-        </span>
+        </div>
 
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
@@ -2233,8 +2233,9 @@
         <section class="section portfolio_section" id="portfolio_section">
             <div class="section_content content">
                 <div class="swipe_animation_container_full">
-                    <h1 class="title_section animation_up" id="title_portfolio">Proyectos Destacados</h1>
+                    <h1 class="title_section animation_up" id="title_portfolio">Portafolio</h1>
                 </div>
+                <h2 class="subtitle_section">Proyectos Destacados</h2>
                 <div class="cards_container swipe_animation_container_half cards_hot_container">
                     <div class="loader_container" data-name="loader_cards_hot_container" id="loader_cards_hot_container">
                         <div class="spinner_container" id="spinner_container_cards_hot">
