fix --> bioBubble not interaction for position

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="header_bubble"></div>
             <img class="photo" src="./src/img/pagina/rex.png" alt="" />
             <div class="info">
-                <h3 class="name">Maximo Decimo Reximiliano</h3>
+                <h3 class="name">Maximo Décimo Reximiliano</h3>
                 <h3 class="place">México CDMX</h3>
             </div>
         </div>
@@ -486,7 +486,7 @@
                 </div>
                 <div class="author_container">
                     <span class="author"><i>Kobe Bryant</i></span>
-                    <span class="author_info">NBA Basketball Champion</span>
+                    <span class="author_info">NBA Champion</span>
                 </div>
             </div>
         </div>
@@ -2271,7 +2271,7 @@
                 </div>
                 <div class="author_container">
                     <span class="author"><i>Kobe Bryant</i></span>
-                    <span class="author_info">NBA Basketball Champion</span>
+                    <span class="author_info">NBA Champion</span>
                 </div>
             </div>
         </div>
@@ -2597,9 +2597,7 @@
                 </div>
                 <div class="lebels_container">
                     <div class="made_content">
-                        <p class="link_text">@JohnKrazy</p>
-                        <p class="copyright_text">© 2024 JohnKrazy.</p>
-                        <p class="copyright_text">All rights reserved</p>
+                        <a href="https://github.com/JohnMcKrazy" target="_blank" class="link_text">@JohnKrazy</a>
                         <div class="btns_container">
                             <button type="button" class="link_btn" data-name="legal_modal">
                                 <span class="label_btn">Legales</span>
