fix --> portfolio btn data name for open modal

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                         </g>
                         <rect class="cls-51" x="203.03" y="539.75" width="594.72" height="284.59" transform="translate(1000.77 1364.1) rotate(-180)" />
 
-                        <g class="desk_portfolio portfolio_btn svg_btn">
+                        <g class="desk_portfolio portfolio_btn svg_btn" data-name="portfolio_modal">
                             <path
                                 class="cls-19"
                                 d="m322.75,611.31h-50.44c-4.2,0-7.63,3.44-7.63,7.63v26.18c0,4.2,3.44,7.63,7.63,7.63h50.44c4.2,0,7.63-3.44,7.63-7.63v-26.18c0-4.2-3.44-7.63-7.63-7.63Zm1.74,32.22c0,4.2-3.44,7.63-7.63,7.63h-38.65c-4.2,0-7.63-3.44-7.63-7.63v-17.61c0-4.2,3.44-7.63,7.63-7.63h38.65c4.2,0,7.63,3.44,7.63,7.63v17.61Z"
