adding webp format images

--- a/index.html
+++ b/index.html
@@ -5223,6 +5223,7 @@
                     </div>
                 </div>
             </div>
+            <div class="footer_animation"></div>
         </footer>
     </body>
     <!--^^TEAMPLATES-->
