add --> more imgs

--- a/index.html
+++ b/index.html
@@ -4670,6 +4670,7 @@
                 <div class="swipe_animation_container_full">
                     <h1 class="title_section animation_up" id="extra_title_skills">Certificaciones</h1>
                 </div>
+                <h2 class="subtitle_section">FreeCodeCamp</h2>
                 <div class="icons_container certifications_icons_container">
                     <div class="badge certification_badge">
                         <div>
