add --> set attribute alt in project card images and certification images (in progress)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title></title>
+        <title>John Krazy - Haciendo Ideas Realidad</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -37,7 +37,7 @@
         </div>
         <div class="bubble bio_bubble">
             <div class="header_bubble"></div>
-            <img class="photo" src="./src/img/photos/johnKPhoto.jpg" alt="" />
+            <img class="photo" src="./src/img/photos/johnKPhoto.jpg" alt="Foto de Jonathan Grajeda" />
             <div class="info">
                 <h3 class="name">Jonathan Grajeda</h3>
                 <h3 class="place">México CDMX</h3>
@@ -81,7 +81,7 @@
         </div>
         <div class="bubble rex_bubble">
             <div class="header_bubble"></div>
-            <img class="photo" src="./src/img/photos/rex.png" alt="" />
+            <img class="photo" src="./src/img/photos/rex.png" alt="Foto de Maximo Decimo Reximiliano" />
             <div class="info">
                 <h3 class="name">Maximo Décimo Reximiliano</h3>
                 <h3 class="place">México CDMX</h3>
@@ -4674,28 +4674,28 @@
                 <div class="icons_container certifications_icons_container">
                     <div class="badge certification_badge">
                         <div>
-                            <img class="image" src="./src/img/certifications/responsive_web_design.png" aria-label="" />
+                            <img class="image" src="./src/img/certifications/responsive_web_design.png" alt="Imagen de Certificado en `Diseño Web Responsivo` emitido por FreeCodeCamp" />
                             <h3 class="badge_name">Responsive Web Design</h3>
                         </div>
                         <a class="btn more_btn" href="https://www.freecodecamp.org/certification/JohnGC/responsive-web-design" aria-label="" target="_blank">Ver</a>
                     </div>
                     <div class="badge certification_badge">
                         <div>
-                            <img class="image" src="./src/img/certifications/legacy_js.png" aria-label="" />
+                            <img class="image" src="./src/img/certifications/legacy_js.png" alt="Imagen de Certificado en `Algoritmos Javascript y Estructura` de Datos emitido por FreeCodeCamp" />
                             <h3 class="badge_name">Legacy - JavaScript Algoritms and Data Structures</h3>
                         </div>
                         <a class="btn more_btn" href="https://www.freecodecamp.org/certification/JohnGC/javascript-algorithms-and-data-structures" aria-label="" target="_blank">Ver</a>
                     </div>
                     <div class="badge certification_badge">
                         <div>
-                            <img class="image" src="./src/img/certifications/data_visualization.png" aria-label="" />
+                            <img class="image" src="./src/img/certifications/data_visualization.png" alt="Imagen de Certificado en `Visualización De Datos` emitido por FreeCodeCamp" />
                             <h3 class="badge_name">Data Visualization</h3>
                         </div>
                         <a class="btn more_btn" href="https://www.freecodecamp.org/certification/JohnGC/data-visualization" aria-label="" target="_blank">Ver</a>
                     </div>
                     <div class="badge certification_badge">
                         <div>
-                            <img class="image" src="./src/img/certifications/scientific_computing_python.png" aria-label="" />
+                            <img class="image" src="./src/img/certifications/scientific_computing_python.png" alt="Imagen de Certificado en `Computación Cientifica Con Python` emitido por FreeCodeCamp" />
                             <h3 class="badge_name">Scientific Computing With Python</h3>
                         </div>
                         <a class="btn more_btn" href="https://www.freecodecamp.org/certification/JohnGC/scientific-computing-with-python-v7" aria-label="" target="_blank">Ver</a>
