change --> certification title change to subtitle, change scale in python and traditional illustration icon

--- a/index.html
+++ b/index.html
@@ -4667,10 +4667,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swipe_animation_container_full">
-                    <h1 class="title_section animation_up" id="extra_title_skills">Certificaciones</h1>
-                </div>
-                <h2 class="subtitle_section">FreeCodeCamp</h2>
+                <h2 class="subtitle_section" id="extra_title_skills">Certificaciones</h2>
                 <div class="icons_container certifications_icons_container">
                     <div class="badge certification_badge">
                         <div>
