add --> type to buttons

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <span class="label_btn">Aceptar</span>
                     </button>
                 </div>
-                <button class="close_btn close_modal" id="alert_modal_storage_close_btn" data-name="alert_modal">
+                <button type="button" class="close_btn close_modal" id="alert_modal_storage_close_btn" data-name="alert_modal">
                     <svg class="close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                         <title>Cerrar</title>
                         <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
@@ -145,7 +145,7 @@
                     </div>
                 </div>
 
-                <button class="close_btn close_modal" id="modal_legal_close_btn" data-name="legal_modal">
+                <button type="button" class="close_btn close_modal" id="modal_legal_close_btn" data-name="legal_modal">
                     <svg class="close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                         <title>Cerrar</title>
                         <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
@@ -180,11 +180,11 @@
                         <label for="input_textarea">Descripción</label>
                         <textarea id="input_textarea" name="description" placeholder="Comparte me un resumen de tu idea"></textarea>
                     </div>
-                    <button type="submit" class="btn send_btn" id="contact_form_send_btn">
+                    <button type="submit" class="btn send_btn" id="modal_contact_form_send_btn">
                         <span class="label_btn">Enviar</span>
                     </button>
                 </form>
-                <button class="close_btn close_modal" id="modal_form_close_btn" data-name="contact_modal">
+                <button type="button" class="close_btn close_modal" id="modal_form_close_btn" data-name="contact_modal">
                     <svg class="close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                         <title>Cerrar</title>
                         <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
@@ -292,16 +292,16 @@
                 </button>
             </div>
             <div class="btns_container nav_menu_link_btns">
-                <button class="phone_menu_btn section_btn action_menu" name="hero_section" data-lebel="Inicio"><span class="label_btn">Inicio</span></button>
-                <button class="phone_menu_btn section_btn action_menu" name="about_section" data-lebel="Acerca de"><span class="label_btn">Acerca De</span></button>
-                <button class="phone_menu_btn section_btn action_menu" name="skills_section" data-lebel="Habilidades"><span class="label_btn">Habilidades</span></button>
-                <button class="phone_menu_btn section_btn action_menu" name="services_section" data-lebel="Servicios"><span class="label_btn">Servicios</span></button>
-                <button class="phone_menu_btn section_btn action_menu" name="portfolio_section" data-lebel="Portafolio"><span class="label_btn">Portafolio</span></button>
-                <button class="phone_menu_btn section_btn action_menu" name="contact_section" data-lebel="Contacto"><span class="label_btn">Contacto</span></button>
-                <button class="phone_menu_btn section_btn action_menu" name="legals_section" data-lebel="Legales"><span class="label_btn">Legales</span></button>
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="hero_section" data-lebel="Inicio"><span class="label_btn">Inicio</span></button>
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="about_section" data-lebel="Acerca de"><span class="label_btn">Acerca De</span></button>
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="skills_section" data-lebel="Habilidades"><span class="label_btn">Habilidades</span></button>
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="services_section" data-lebel="Servicios"><span class="label_btn">Servicios</span></button>
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="portfolio_section" data-lebel="Portafolio"><span class="label_btn">Portafolio</span></button>
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="contact_section" data-lebel="Contacto"><span class="label_btn">Contacto</span></button>
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="legals_section" data-lebel="Legales"><span class="label_btn">Legales</span></button>
             </div>
             <div class="extra_btns_container nav_menu_extra_btns">
-                <button class="extra_btn theme_btn">
+                <button type="button" class="extra_btn theme_btn">
                     <div class="icon_container">
                         <svg class="icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                             <path
@@ -311,7 +311,7 @@
                         </svg>
                     </div>
                 </button>
-                <button class="extra_btn close_btn action_menu" id="menu_container_close_btn">
+                <button type="button" class="extra_btn close_btn action_menu" id="menu_container_close_btn">
                     <div class="icon_container">
                         <svg class="icon_svg close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>Cerrar</title>
@@ -324,7 +324,7 @@
         </div>
         <!-- ! MENU SOCIALS -->
         <div class="menu_social_container">
-            <button class="menu_btn_social_menu social_menu_btn">
+            <button type="button" class="menu_btn_social_menu social_menu_btn">
                 <div class="icon_container">
                     <svg class="icon_svg social_icon_svg conection_icon_svg" data-name="conection_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 18">
                         <title>Enlace</title>
@@ -376,7 +376,7 @@
                         </svg>
                     </div>
                 </a>
-                <button class="social_menu_btn contact_btn social_btn" tabindex="0">
+                <button type="button" class="social_menu_btn contact_btn social_btn" tabindex="0">
                     <div class="icon_container">
                         <svg class="icon_svg social_icon_svg contact_icon_svg" data-name="contact_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 18">
                             <title>Correo</title>
@@ -398,10 +398,10 @@
                     <h2>Ilustración <span class="accent_color">/</span> Diseño <span class="accent_color">/</span> Web <span class="accent_color">/</span> Programación</h2>
                 </div>
                 <div class="hero_btns_container btns_container">
-                    <button class="btn btn_hero" id="hero_btn_portfolio" name="portfolio_section" tabindex="0"><h3 class="label_btn">Portafolio</h3></button>
-                    <button class="btn contact_btn" id="hero_btn_about" name="about_section" tabindex="0"><h3 class="label_btn">Contactame</h3></button>
+                    <button type="button" class="btn btn_hero" id="hero_btn_portfolio" name="portfolio_section" tabindex="0"><h3 class="label_btn">Portafolio</h3></button>
+                    <button type="button" class="btn contact_btn" id="hero_btn_about" name="about_section" tabindex="0"><h3 class="label_btn">Contactame</h3></button>
                 </div>
-                <button class="btn_down btn_menu" id="hero_btn_down" name="about_section">
+                <button type="button" class="btn_down btn_menu" id="hero_btn_down" name="about_section">
                     <h3>Ver mas</h3>
                     <svg class="arrow_down_svg accent_color" data-name="arrow_down_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 9">
                         <title>arrow down</title>
@@ -412,7 +412,7 @@
         </header>
         <nav class="nav_menu">
             <div class="menu_container content">
-                <button class="icon_container logo_btn">
+                <button type="button" class="icon_container logo_btn">
                     <svg class="johnK_icon_svg icon_svg" data-name="johnK_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 36.85 24.58">
                         <title>John.K</title>
                         <g id="johnK_icon">
@@ -437,7 +437,7 @@
                         </g>
                     </svg>
                 </button>
-                <button class="action_menu menu_btn">
+                <button type="button" class="action_menu menu_btn">
                     <div class="btn_construction">
                         <div class="bar top_bar"></div>
                         <div class="bar center_bar"></div>
@@ -445,14 +445,14 @@
                     </div>
                 </button>
                 <div class="menu_controler nav_menu_controler">
-                    <button class="section_btn nav_btn main_nav_btn" name="hero_section" data-lebel="Inicio">Inicio</button>
-                    <button class="section_btn nav_btn about_nav_btn" name="about_section" data-lebel="Acerca de">Acerca De</button>
-                    <button class="section_btn nav_btn skills_nav_btn" name="skills_section" data-lebel="Habilidades">Habilidades</button>
-                    <button class="section_btn nav_btn services_nav_btn" name="services_section" data-lebel="Servicios">Servicios</button>
-                    <button class="section_btn nav_btn portfolio_nav_btn" name="portfolio_section" data-lebel="Portafolio">Portafolio</button>
-                    <button class="section_btn nav_btn contact_nav_btn" name="contact_section" data-lebel="Contacto">Contacto</button>
-                    <button class="section_btn nav_btn legals_nav_btn" name="legals_section" data-lebel="Legales">Legales</button>
-                    <button class="nav_btn theme_btn">
+                    <button type="button" class="section_btn nav_btn main_nav_btn" name="hero_section" data-lebel="Inicio">Inicio</button>
+                    <button type="button" class="section_btn nav_btn about_nav_btn" name="about_section" data-lebel="Acerca de">Acerca De</button>
+                    <button type="button" class="section_btn nav_btn skills_nav_btn" name="skills_section" data-lebel="Habilidades">Habilidades</button>
+                    <button type="button" class="section_btn nav_btn services_nav_btn" name="services_section" data-lebel="Servicios">Servicios</button>
+                    <button type="button" class="section_btn nav_btn portfolio_nav_btn" name="portfolio_section" data-lebel="Portafolio">Portafolio</button>
+                    <button type="button" class="section_btn nav_btn contact_nav_btn" name="contact_section" data-lebel="Contacto">Contacto</button>
+                    <button type="button" class="section_btn nav_btn legals_nav_btn" name="legals_section" data-lebel="Legales">Legales</button>
+                    <button type="button" class="nav_btn theme_btn" name="theme_btn">
                         <div class="icon_container">
                             <svg class="icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path
@@ -4671,28 +4671,28 @@
                 <div class="icons_container certifications_icons_container">
                     <div class="badge certification_badge">
                         <div>
-                            <img class="image" src="./src/img/certifications/responsive_web_design.webp" alt="Imagen de Certificado en `Diseño Web Responsivo` emitido por FreeCodeCamp" />
+                            <img class="image" src="./src/img/certifications/responsive_web_design.webp" alt="Imagen de Certificado en `Diseño Web Responsivo` emitido por FreeCodeCamp" height="350px" />
                             <h3 class="badge_name">Responsive Web Design</h3>
                         </div>
                         <a class="btn more_btn" href="https://www.freecodecamp.org/certification/JohnGC/responsive-web-design" aria-label="" target="_blank">Ver</a>
                     </div>
                     <div class="badge certification_badge">
                         <div>
-                            <img class="image" src="./src/img/certifications/legacy_js.webp" alt="Imagen de Certificado en `Algoritmos Javascript y Estructura` de Datos emitido por FreeCodeCamp" />
+                            <img class="image" src="./src/img/certifications/legacy_js.webp" alt="Imagen de Certificado en `Algoritmos Javascript y Estructura` de Datos emitido por FreeCodeCamp" height="350px" />
                             <h3 class="badge_name">Legacy - JavaScript Algoritms and Data Structures</h3>
                         </div>
                         <a class="btn more_btn" href="https://www.freecodecamp.org/certification/JohnGC/javascript-algorithms-and-data-structures" aria-label="" target="_blank">Ver</a>
                     </div>
                     <div class="badge certification_badge">
                         <div>
-                            <img class="image" src="./src/img/certifications/data_visualization.webp" alt="Imagen de Certificado en `Visualización De Datos` emitido por FreeCodeCamp" />
+                            <img class="image" src="./src/img/certifications/data_visualization.webp" alt="Imagen de Certificado en `Visualización De Datos` emitido por FreeCodeCamp" height="350px" />
                             <h3 class="badge_name">Data Visualization</h3>
                         </div>
                         <a class="btn more_btn" href="https://www.freecodecamp.org/certification/JohnGC/data-visualization" aria-label="" target="_blank">Ver</a>
                     </div>
                     <div class="badge certification_badge">
                         <div>
-                            <img class="image" src="./src/img/certifications/scientific_computing_python.webp" alt="Imagen de Certificado en `Computación Cientifica Con Python` emitido por FreeCodeCamp" />
+                            <img class="image" src="./src/img/certifications/scientific_computing_python.webp" alt="Imagen de Certificado en `Computación Cientifica Con Python` emitido por FreeCodeCamp" height="350px" />
                             <h3 class="badge_name">Scientific Computing With Python</h3>
                         </div>
                         <a class="btn more_btn" href="https://www.freecodecamp.org/certification/JohnGC/scientific-computing-with-python-v7" aria-label="" target="_blank">Ver</a>
