change --> doble ids

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                 </div>
                 <form class="modal_form" id="modal_contact_form">
                     <div class="input_container">
-                        <label for="input_name">Nombre/s</label>
-                        <input type="text" placeholder="Escribe tu/s Nombre/s" id="input_name" name="name" />
+                        <label for="modal_input_name">Nombre/s</label>
+                        <input type="text" placeholder="Escribe tu/s Nombre/s" id="modal_input_name" name="name" />
                     </div>
 
                     <div class="input_container">
